# MermaidGenerator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md  UML-Diagram.md  class_diagrams.md  pyproject.toml
.github/workflows/: blank.yaml  build.yaml  publish.yaml  tests.yaml
docs/: class_diagrams.md
examples/: class_diagrams.md  test.py
mermaidgenerator/: __main__.py  generator.py  main.py  test.py
tests/: test_generator.py
